# cookiecutter-python-project

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: main.yml
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: main.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: logic.py  logs.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: __main__.py  core.py  settings.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/handlers/: healthcheck.py  key_value.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/: core.py  logs.py  sentry.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/logic/key_value/: core.py  in_memory.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/worker/: __main__.py  worker.py
{{cookiecutter.project_slug}}/tests/integration/{{cookiecutter.project_slug}}/: test_api.py  test_logic.py
{{cookiecutter.project_slug}}/tests/unit/{{cookiecutter.project_slug}}/: test_logic.py
{{cookiecutter.project_slug}}/tests/unit/{{cookiecutter.project_slug}}/key_value/: test_in_memory.py
