[tool.poetry]
name = "cookiecutter-python-project"
version = "0.1.0"
description = ""
authors = ["Alexei Stoliarov <alexei.stoliarov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
