[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.full_name}} {{cookiecutter.email}}"]
readme = "README.md"
packages = [{include = "{{cookiecutter.project_slug}}", from = "src"}]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
