[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
pydantic = "^1.10.10"
structlog = "^23.1.0"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
disallow_any_decorated = false
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = "stubs"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]
